--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-31LV6C23MS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-31LV6C23MS');
+    </script>
     <title>PDF</title>
 </head>
 <body>
-    <embed src="empty_pdf.pdf" width="100%" height="1000px" />
+    <embed src="empty_pdf.pdf" width="100%" height="2000px" />
 </body>
 </html>
