--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <title>PDF</title>
 </head>
 <body>
-    <embed src="empty_pdf.pdf" width="100%" height="100%" />
+    <embed src="empty_pdf.pdf" width="100%" height="2000px" />
 </body>
 </html>
